--- a/pom.xml
+++ b/pom.xml
@@ -29,20 +29,15 @@
 
     <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>choir-backend-mock</artifactId>
-            <version>${project.version}</version>
+            <groupId>api</groupId>
+	        <artifactId>SampleBackend</artifactId>
+	        <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.jmock</groupId>
             <artifactId>jmock-junit4</artifactId>
             <version>2.8.2</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>dk.cphbusiness</groupId>
-            <artifactId>choir-contract</artifactId>
-            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
